@@ -18,7 +18,6 @@ package com.android.tradefed.testtype;
 import static org.junit.Assert.assertTrue;
 
 import com.android.ddmlib.IDevice;
-import com.android.ddmlib.testrunner.TestIdentifier;
 import com.android.tradefed.build.IBuildInfo;
 import com.android.tradefed.build.IFolderBuildInfo;
 import com.android.tradefed.command.CommandOptions;
@@ -28,9 +27,11 @@ import com.android.tradefed.config.OptionSetter;
 import com.android.tradefed.device.ITestDevice;
 import com.android.tradefed.device.NullDevice;
 import com.android.tradefed.device.StubDevice;
+import com.android.tradefed.metrics.proto.MetricMeasurement.Metric;
 import com.android.tradefed.result.FileInputStreamSource;
 import com.android.tradefed.result.ITestInvocationListener;
 import com.android.tradefed.result.LogDataType;
+import com.android.tradefed.result.TestDescription;
 import com.android.tradefed.util.CommandResult;
 import com.android.tradefed.util.CommandStatus;
 import com.android.tradefed.util.IRunUtil;
@@ -39,16 +40,16 @@ import com.android.tradefed.util.IRunUtil.EnvPriority;
 import org.easymock.EasyMock;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.JUnit4;
 
 import java.io.File;
 import java.io.FileOutputStream;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
-/**
- * Unit tests for {@link VersionedTfLauncher}
- */
+/** Unit tests for {@link VersionedTfLauncher}. */
+@RunWith(JUnit4.class)
 public class VersionedTfLauncherTest {
 
     private static final String FAKE_SERIAL = "FAKE_SERIAL";
@@ -107,10 +108,11 @@ public class VersionedTfLauncherTest {
         mMockIDevice = EasyMock.createMock(IDevice.class);
 
         CommandResult cr = new CommandResult(CommandStatus.SUCCESS);
-        mMockRunUtil.unsetEnvVariable(SubprocessTfLauncher.TF_GLOBAL_CONFIG);
+        mMockRunUtil.unsetEnvVariable(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE);
         mMockRunUtil.setEnvVariablePriority(EnvPriority.SET);
         mMockRunUtil.setEnvVariable(
-                EasyMock.eq(SubprocessTfLauncher.TF_GLOBAL_CONFIG), (String) EasyMock.anyObject());
+                EasyMock.eq(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE),
+                (String) EasyMock.anyObject());
 
         EasyMock.expect(
                         mMockRunUtil.runTimedCmd(
@@ -119,6 +121,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -131,6 +134,9 @@ public class VersionedTfLauncherTest {
                                 EasyMock.eq(FAKE_SERIAL),
                                 EasyMock.eq("--additional-tests-zip"),
                                 EasyMock.eq(ADDITIONAL_TEST_ZIP),
+                                EasyMock.eq("--" + CommandOptions.INVOCATION_DATA),
+                                EasyMock.eq(SubprocessTfLauncher.SUBPROCESS_TAG_NAME),
+                                EasyMock.eq("true"),
                                 EasyMock.eq("--subprocess-report-file"),
                                 (String) EasyMock.anyObject()))
                 .andReturn(cr);
@@ -141,16 +147,17 @@ public class VersionedTfLauncherTest {
         EasyMock.expect(mMockBuildInfo.getBuildId()).andReturn("FAKEID").times(2);
         EasyMock.expect(mMockBuildInfo.getFile("general-tests.zip"))
                 .andReturn(new File(ADDITIONAL_TEST_ZIP));
+        mMockBuildInfo.addBuildAttribute(SubprocessTfLauncher.PARENT_PROC_TAG_NAME, "true");
         EasyMock.expect(mMockTestDevice.getIDevice()).andReturn(mMockIDevice).times(2);
         EasyMock.expect(mMockTestDevice.getSerialNumber()).andReturn(FAKE_SERIAL).times(1);
         mMockListener.testLog((String)EasyMock.anyObject(), (LogDataType)EasyMock.anyObject(),
                 (FileInputStreamSource)EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier)EasyMock.anyObject());
-        mMockListener.testEnded((TestIdentifier)EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
+        mMockListener.testEnded(
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
 
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
@@ -166,10 +173,11 @@ public class VersionedTfLauncherTest {
         mMockIDevice = new NullDevice("null-device-1");
 
         CommandResult cr = new CommandResult(CommandStatus.SUCCESS);
-        mMockRunUtil.unsetEnvVariable(SubprocessTfLauncher.TF_GLOBAL_CONFIG);
+        mMockRunUtil.unsetEnvVariable(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE);
         mMockRunUtil.setEnvVariablePriority(EnvPriority.SET);
         mMockRunUtil.setEnvVariable(
-                EasyMock.eq(SubprocessTfLauncher.TF_GLOBAL_CONFIG), (String) EasyMock.anyObject());
+                EasyMock.eq(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE),
+                (String) EasyMock.anyObject());
 
         EasyMock.expect(
                         mMockRunUtil.runTimedCmd(
@@ -178,6 +186,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -187,6 +196,9 @@ public class VersionedTfLauncherTest {
                                 EasyMock.eq(TF_COMMAND_LINE_OPTION),
                                 EasyMock.eq(TF_COMMAND_LINE_OPTION_VALUE),
                                 EasyMock.eq("--null-device"),
+                                EasyMock.eq("--" + CommandOptions.INVOCATION_DATA),
+                                EasyMock.eq(SubprocessTfLauncher.SUBPROCESS_TAG_NAME),
+                                EasyMock.eq("true"),
                                 EasyMock.eq("--subprocess-report-file"),
                                 (String) EasyMock.anyObject()))
                 .andReturn(cr);
@@ -196,15 +208,16 @@ public class VersionedTfLauncherTest {
         EasyMock.expect(mMockBuildInfo.getRootDir()).andReturn(new File(""));
         EasyMock.expect(mMockBuildInfo.getBuildId()).andReturn("FAKEID").times(2);
         EasyMock.expect(mMockBuildInfo.getFile("general-tests.zip")).andReturn(null);
+        mMockBuildInfo.addBuildAttribute(SubprocessTfLauncher.PARENT_PROC_TAG_NAME, "true");
         EasyMock.expect(mMockTestDevice.getIDevice()).andReturn(mMockIDevice).times(1);
         mMockListener.testLog((String)EasyMock.anyObject(), (LogDataType)EasyMock.anyObject(),
                 (FileInputStreamSource)EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier)EasyMock.anyObject());
-        mMockListener.testEnded((TestIdentifier)EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
+        mMockListener.testEnded(
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
 
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
@@ -216,10 +229,11 @@ public class VersionedTfLauncherTest {
     @Test
     public void testRun_DeviceNoPreSetup() {
         CommandResult cr = new CommandResult(CommandStatus.SUCCESS);
-        mMockRunUtil.unsetEnvVariable(SubprocessTfLauncher.TF_GLOBAL_CONFIG);
+        mMockRunUtil.unsetEnvVariable(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE);
         mMockRunUtil.setEnvVariablePriority(EnvPriority.SET);
         mMockRunUtil.setEnvVariable(
-                EasyMock.eq(SubprocessTfLauncher.TF_GLOBAL_CONFIG), (String) EasyMock.anyObject());
+                EasyMock.eq(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE),
+                (String) EasyMock.anyObject());
 
         EasyMock.expect(
                         mMockRunUtil.runTimedCmd(
@@ -228,6 +242,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -238,6 +253,9 @@ public class VersionedTfLauncherTest {
                                 EasyMock.eq(TF_COMMAND_LINE_OPTION_VALUE),
                                 EasyMock.eq("--additional-tests-zip"),
                                 EasyMock.eq(ADDITIONAL_TEST_ZIP),
+                                EasyMock.eq("--" + CommandOptions.INVOCATION_DATA),
+                                EasyMock.eq(SubprocessTfLauncher.SUBPROCESS_TAG_NAME),
+                                EasyMock.eq("true"),
                                 EasyMock.eq("--subprocess-report-file"),
                                 (String) EasyMock.anyObject()))
                 .andReturn(cr);
@@ -248,6 +266,7 @@ public class VersionedTfLauncherTest {
         EasyMock.expect(mMockBuildInfo.getBuildId()).andReturn("FAKEID").times(2);
         EasyMock.expect(mMockBuildInfo.getFile("general-tests.zip"))
                 .andReturn(new File(ADDITIONAL_TEST_ZIP));
+        mMockBuildInfo.addBuildAttribute(SubprocessTfLauncher.PARENT_PROC_TAG_NAME, "true");
         EasyMock.expect(mMockTestDevice.getIDevice()).andReturn(new StubDevice("serial1")).times(2);
         mMockListener.testLog(
                 (String) EasyMock.anyObject(),
@@ -255,11 +274,10 @@ public class VersionedTfLauncherTest {
                 (FileInputStreamSource) EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier) EasyMock.anyObject());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
         mMockListener.testEnded(
-                (TestIdentifier) EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
 
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
@@ -286,10 +304,11 @@ public class VersionedTfLauncherTest {
         mMockIDevice = EasyMock.createMock(IDevice.class);
 
         CommandResult cr = new CommandResult(CommandStatus.SUCCESS);
-        mMockRunUtil.unsetEnvVariable(SubprocessTfLauncher.TF_GLOBAL_CONFIG);
+        mMockRunUtil.unsetEnvVariable(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE);
         mMockRunUtil.setEnvVariablePriority(EnvPriority.SET);
         mMockRunUtil.setEnvVariable(
-                EasyMock.eq(SubprocessTfLauncher.TF_GLOBAL_CONFIG), (String) EasyMock.anyObject());
+                EasyMock.eq(GlobalConfiguration.GLOBAL_CONFIG_VARIABLE),
+                (String) EasyMock.anyObject());
 
         EasyMock.expect(
                         mMockRunUtil.runTimedCmd(
@@ -298,6 +317,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -312,6 +332,9 @@ public class VersionedTfLauncherTest {
                                 EasyMock.eq("2"),
                                 EasyMock.eq("--shard-index"),
                                 EasyMock.eq("1"),
+                                EasyMock.eq("--" + CommandOptions.INVOCATION_DATA),
+                                EasyMock.eq(SubprocessTfLauncher.SUBPROCESS_TAG_NAME),
+                                EasyMock.eq("true"),
                                 EasyMock.eq("--subprocess-report-file"),
                                 (String) EasyMock.anyObject()))
                 .andReturn(cr);
@@ -321,6 +344,7 @@ public class VersionedTfLauncherTest {
         EasyMock.expect(mMockBuildInfo.getRootDir()).andReturn(new File(""));
         EasyMock.expect(mMockBuildInfo.getBuildId()).andReturn("FAKEID").times(2);
         EasyMock.expect(mMockBuildInfo.getFile("general-tests.zip")).andReturn(null);
+        mMockBuildInfo.addBuildAttribute(SubprocessTfLauncher.PARENT_PROC_TAG_NAME, "true");
         EasyMock.expect(mMockTestDevice.getIDevice()).andReturn(mMockIDevice).times(2);
         EasyMock.expect(mMockTestDevice.getSerialNumber()).andReturn(FAKE_SERIAL).times(1);
         mMockListener.testLog(
@@ -329,11 +353,10 @@ public class VersionedTfLauncherTest {
                 (FileInputStreamSource) EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier) EasyMock.anyObject());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
         mMockListener.testEnded(
-                (TestIdentifier) EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
         shardedTest.run(mMockListener);
